SW-11280 - Fixed product navigation scroll issue on tablet

--- a/themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
+++ b/themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
@@ -773,6 +773,10 @@ It contains the product actions, the product information such as pictures and de
 
 @media screen and(min-width: @desktopViewportWidth) {
 
+    .is--ctl-detail .page-wrap {
+        overflow-x: hidden;
+    }
+
     .product--details {
         .product--header{
             .unitize(padding-top, 45);
